      [Font Size Addend]
      Set an addend number that will be added (or subtracted if negative)
      to "font_size" value of all widgets.
      Default value is "0", which no changes will be applied.
      [Font Weight]
      Set font weight to replace "font_weight" setting of all widgets.
      Default selection is "no change", which no changes will be applied.
    - Add "compatibility" option to "Config menu" on main window for easy access.
    - Moved "show_at_startup", "minimize_to_tray", "remember_position" options
      to "Window menu" on main window.
    - Removed "thick black border" from all widgets that could be visible
      when running on certain window manager, or using certain window capture APPs.

2.1.1 (2023-05-24)
-----------------------------
* Flag Widget
    - Removed countdown timer feature.

* Core
    - Add new "compatibility" section in json file for solving platform specific problem.
    - Add "enable_bypass_window_manager" option in "compatibility"
      section for linux platform (thanks to help from srlemke & Bernat).

* Misc
    - Updated customization guide.

2.1.0 (2023-05-22)
-----------------------------
* [New]Friction Circle Widget
    - Show longitudinal & lateral g force as friction circle with 2 orientation layouts.
    - Show longitudinal & lateral g force readings.
    - Show max longitudinal & lateral g force readings.
    - Show reference circle from max average lateral g force reading.
    - Show g force trace plot with customizable sample size, and line or points style.
    - Show center mark and up to 5 customizable reference circles.

* Radar Widget
    - Fixed wrong outline drawing when set "vehicle_outline_width" to 0.

* [New]Force Module
    - Provide vehicle g force and downforce data calculation for Force & Friction Circle Widget,
    - Add customizable options for g force calculation.

* Misc
    - Add "Remember position" position to main window Config menu,