@@ -91,7 +91,7 @@ SETTING_DEFAULT = {
         "position_y": 293,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -122,7 +122,7 @@ SETTING_DEFAULT = {
         "position_x": 453,
         "position_y": 465,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -139,7 +139,7 @@ SETTING_DEFAULT = {
         "position_x": 253,
         "position_y": 476,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -159,7 +159,7 @@ SETTING_DEFAULT = {
         "position_y": 525,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -186,7 +186,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 98,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -219,7 +219,7 @@ SETTING_DEFAULT = {
         "opacity": 0.9,
         "layout": 0,
         "swap_style": False,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 17,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -244,7 +244,7 @@ SETTING_DEFAULT = {
         "position_x": 504,
         "position_y": 352,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 30,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -267,7 +267,7 @@ SETTING_DEFAULT = {
         "position_y": 293,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -299,7 +299,7 @@ SETTING_DEFAULT = {
         "position_y": 293,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -330,7 +330,7 @@ SETTING_DEFAULT = {
         "position_y": 509,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 22,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -383,7 +383,7 @@ SETTING_DEFAULT = {
         "position_y": 395,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -404,7 +404,7 @@ SETTING_DEFAULT = {
         "position_x": 779,
         "position_y": 688,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 13,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -465,7 +465,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 208,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -507,7 +507,7 @@ SETTING_DEFAULT = {
         "position_x": 306,
         "position_y": 293,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 44,
         "font_weight_gear": "bold",
         "font_weight_speed": "normal",
@@ -581,7 +581,7 @@ SETTING_DEFAULT = {
         "position_y": 393,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -616,7 +616,7 @@ SETTING_DEFAULT = {
         "position_x": 556,
         "position_y": 457,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 30,
         "font_weight": "bold",
         "bar_padding": 0.3,
@@ -714,7 +714,7 @@ SETTING_DEFAULT = {
         "position_x": 453,
         "position_y": 489,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -731,7 +731,7 @@ SETTING_DEFAULT = {
         "position_x": 320,
         "position_y": 148,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -813,7 +813,7 @@ SETTING_DEFAULT = {
         "position_x": 253,
         "position_y": 384,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -839,7 +839,7 @@ SETTING_DEFAULT = {
         "position_y": 157,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -874,7 +874,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 127,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -906,7 +906,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 610,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -999,7 +999,7 @@ SETTING_DEFAULT = {
         "position_x": 585,
         "position_y": 358,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -1025,7 +1025,7 @@ SETTING_DEFAULT = {
         "position_y": 423,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1067,7 +1067,7 @@ SETTING_DEFAULT = {
         "position_y": 500,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1106,7 +1106,7 @@ SETTING_DEFAULT = {
         "position_x": 663,
         "position_y": 25,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -1146,7 +1146,7 @@ SETTING_DEFAULT = {
         "position_x": 253,
         "position_y": 430,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "enable_auto_font_offset": True,
@@ -1166,7 +1166,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 383,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1184,7 +1184,7 @@ SETTING_DEFAULT = {
         "position_y": 525,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1214,7 +1214,7 @@ SETTING_DEFAULT = {
         "position_y": 444,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1247,7 +1247,7 @@ SETTING_DEFAULT = {
         "position_x": 57,
         "position_y": 70,
         "opacity": 0.9,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
@@ -1273,7 +1273,7 @@ SETTING_DEFAULT = {
         "position_y": 383,
         "opacity": 0.9,
         "layout": 0,
-        "font_name": "consolas",
+        "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
