@@ -25,6 +25,9 @@ WIP
       [Font Weight]
       Set font weight to replace "font_weight" setting of all widgets.
       Default selection is "no change", which no changes will be applied.
+    - Add "Reset to Default" context menu to widget & module Config dialog,
+      user can now right-click on an option and select "Reset to Default"
+      to reset individual option.
     - Add "compatibility" option to "Config menu" on main window for easy access.
     - Moved "show_at_startup", "minimize_to_tray", "remember_position" options
       to "Window menu" on main window.
